cmake_minimum_required(VERSION 3.2)
project(Cpp)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++11")

add_executable(complex01 lec2/complex01.cpp)
add_executable(complex02 lec2/complex02.cpp)
add_executable(complex03 lec2/complex03.cpp)
add_executable(complex04 lec2/complex04.cpp)
add_executable(complex05 lec2/complex05.cpp)
add_executable(complex06 lec2/complex06.cpp)
add_executable(complex07 lec2/complex07.cpp)
add_executable(complex08 lec2/complex08.cpp)
add_executable(complex09 lec2/complex09.cpp)
add_executable(complex10 lec2/complex10.cpp)
add_executable(playground lec2/playground.cpp)